<resources>
    <string name="app_name">Magic Marketplace</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="my_cart">My Cart</string>
    <string name="admin">Admin</string>
    <string name="my_watchlist">My Watchlist</string>
    <string name="search_for_cards">Search for Cards</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_message">Are you sure you want to log out?</string>
    <string name="my_inventory">My Inventory</string>
    <string name="users">USERS</string>
    <string name="card_listings">CARD LISTINGS</string>
    <string name="add_a_listing">Add A Listing</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="set">Set:</string>
    <string name="price">Price:</string>
    <string name="foil">Foil:</string>
    <string name="rarity">Rarity:</string>
    <string name="inventory">Inventory:</string>
    <string name="_0">0</string>
    <string name="image_url">Image URL:</string>
    <string name="card_name">Card Name</string>
    <string name="card_set_name">Card Set Name</string>
    <string name="card_rarity">Card Rarity</string>
    <string name="is_the_card_a_foil">Is the card a foil?</string>
    <string name="number_in_stock">Number in Stock</string>
    <string name="price_of_card">Price of Card</string>
    <string name="picture_url">Picture URL</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="back">Back</string>
    <string name="Price_in_Dollars">$%1$s</string>
    <string name="is_a_foil">Is a Foil</string>
    <string name="is_not_a_foil">Is not a Foil</string>
    <string name="owned"># Owned:</string>
    <string name="in_stock"># in Stock:</string>
</resources>